Improved Date.now method. Fixed some strings. Removed vulnerabilities on enemies. Zombies make more harm. Life and mana is kept through levels

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <div id="wrapper">
     <canvas id="fg"></canvas>
     <div id="i">
-      <p id="i0">They laughed when you said that the darkness will come for all of us</p>
-      <p id="i1">They said you were crazy and locked you out</p>
-      <p id="i2">They let you there so you rot</p>
+      <p id="i0">They laughed when you said the darkness would come for all of us</p>
+      <p id="i1">They said you were crazy and locked you up</p>
+      <p id="i2">They let you there to rot</p>
       <p id="i3">They now are DEAD</p>
       <p id="i4">You are the last man alive</p>
       <p id="i5">It is on you to find the four elements and restore life</p>
       <p id="i6">No pressure ;)</p>
-      <p class="ii">Press 'Enter' to skip intro</p>
+      <p class="ii">Press Enter to skip intro</p>
     </div>
     <div id="g">
       <p id="g0">Game Over</p>
       <p id="g1">Oh, the humanity!</p>
-      <p class="ii">Press 'Enter' to restart</p>
+      <p class="ii">Press Enter to restart</p>
     </div>
     <div id="s">
       <p id="s0">Pariah</p>
